<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.example.favdish.view.fragment.allDishes.AllDishesFragment"
        android:label="@string/title_all_dishes"
        tools:layout="@layout/fragment_all_dishes">
        <action
            android:id="@+id/action_navigation_all_dishes_to_dishDetailsFragment"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="com.example.favdish.view.fragment.favoriteDishes.FavoriteDishesFragment"
        android:label="@string/title_favorite_dishes"
        tools:layout="@layout/fragment_favorite_dishes" />

    <fragment
        android:id="@+id/navigation_random_dishes"
        android:name="com.example.favdish.view.fragment.randomDish.RandomDishFragment"
        android:label="@string/title_random_dish"
        tools:layout="@layout/fragment_random_dish" />
    <fragment
        android:id="@+id/dishDetailsFragment"
        android:name="com.example.favdish.view.fragment.detailDishFragment.DishDetailsFragment"
        android:label="@string/title_detail_dish"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="FavDishId"
            app:argType="integer" />
    </fragment>
</navigation>