<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_dish_detail_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".view.fragment.allDishes.AllDishesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fl_dish_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/dishDetailImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:background="@color/dish_image_background"
                android:contentDescription="@string/image_contentDescription"
                android:scaleType="fitXY"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/imageTintColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_favorite_dish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_baseline_favorite_border_24" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/dishTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_title"
            android:textStyle="bold"
            android:fontFamily="@font/g_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_below="@+id/fl_dish_image"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>


        <TextView
            android:id="@+id/dishDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_dish_image"
            android:layout_marginStart="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toEndOf="@+id/dishTitle"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Dish Title" />

        <TextView
            android:id="@+id/dishType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_type"
            android:textStyle="bold"
            android:fontFamily="@font/g_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_below="@+id/dishDetailTitle"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/dishDetailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailTitle"
            android:layout_marginStart="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@+id/dishType"
            android:gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Dish Type" />

        <TextView
            android:id="@+id/dishCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_category"
            android:textStyle="bold"
            android:fontFamily="@font/g_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_below="@+id/dishDetailType"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/dishDetailCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailType"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@+id/dishCategory"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="Category" />

        <TextView
            android:id="@+id/dishDetailIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailCategory"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_ingredients"
            android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/g_bold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dishDetailIngredientsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailIngredients"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Ingredients Value" />

        <TextView
            android:id="@+id/tv_cooking_direction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailIngredientsValue"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:textAlignment="center"
            android:text="@string/lbl_direction_to_cook"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/g_bold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dishDetailDirectionCooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cooking_direction_label"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="Direction To Cook" />

        <TextView
            android:id="@+id/dishDetailCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dishDetailDirectionCooking"
            android:layout_marginTop="21dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/lbl_estimate_cooking_time" />
    </RelativeLayout>
</ScrollView>