<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.randomDish.RandomDishFragment">


    <ScrollView
        android:id="@+id/rl_dish_detail_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fl_dish_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/randomDishImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:background="@color/dish_image_background"
                    android:contentDescription="@string/image_contentDescription"
                    android:scaleType="fitXY"
                    android:tintMode="src_atop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/imageTintColor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_favorite_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_contentDescription"
                        android:src="@drawable/ic_baseline_favorite_border_24" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dishTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_dish_image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/g_bold"
                android:text="@string/dish_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/randomDishTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_dish_image"
                android:layout_marginStart="@dimen/_51sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_toEndOf="@+id/dishTitle"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Dish Title" />

            <TextView
                android:id="@+id/dishType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/randomDishTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/g_bold"
                android:text="@string/dish_type"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/randomDishType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/randomDishTitle"
                android:layout_marginStart="@dimen/_51sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toEndOf="@+id/dishType"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Dish Type" />

            <TextView
                android:id="@+id/dishCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dishType"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/g_bold"
                android:text="@string/dish_category"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/randomDishCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dishType"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toEndOf="@+id/dishCategory"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Category" />

            <TextView
                android:id="@+id/dishIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/randomDishCategory"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/g_bold"
                android:text="@string/lbl_ingredients"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/randomDishIngredientsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dishIngredients"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv_cooking_direction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/randomDishIngredientsValue"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/g_bold"
                android:text="@string/lbl_direction_to_cook"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/randomDishDirectionCooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_cooking_direction_label"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Direction To Cook" />

            <TextView
                android:id="@+id/randomDishCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/randomDishDirectionCooking"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/lbl_estimate_cooking_time" />
        </RelativeLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>